--- a/BlogBundle/Resources/views/Blog/affichergarderie.html.twig
+++ b/BlogBundle/Resources/views/Blog/affichergarderie.html.twig
@@ -59,21 +59,15 @@
                                                 <img alt="Summer Childcare Questions" src="{{  asset('images/blog/'~garderie.nom~'_'~garderie.id~'.png') }}">
                                                 <span class="hoverShadow"></span><a href="{{  asset('images/blog/'~garderie.nom~'_'~garderie.id~'.png') }}" title="Summer Childcare Questions" rel="prettyPhoto[slideshow]" class="inited"><span class="hoverIcon"></span></a></div>
 
-                                            <h4>
-                                                <a href="{{  path('affichergarderie1',{'id': garderie.id} )  }}">{{ garderie.nom }}</a>
-                                            </h4>
-
-
                                             <p>Le nom est  : {{ garderie.nom}}</p>
-                                            <p>Le prix est : {{ garderie.prix }}</p>
                                             <div class="masonryInfo">
                                                 Description
                                                 <a href="#" class="post_date">{{ garderie.description[:50] }} (...) </a>
                                             </div>
+
+                                            <span class="inlineShadow"></span>
                                         </div>
-
                                     </article>
-
 
                                 {% endfor %}
                             </section>
