--- a/BlogBundle/Resources/views/Default/index.html.twig
+++ b/BlogBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,4 @@
-{% extends 'base.html.twig' %}
-{% block content %}
+{% extends '::base_interlocuteur.html.twig' %}
 {% block fos_user_content %}
-    {% endblock fos_user_content %}
 
 {% endblock %}
