--- a/BlogBundle/Resources/views/Default/index.html.twig
+++ b/BlogBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,8 @@
-{% extends '::base_interlocuteur.html.twig' %}
+{% extends 'base.html.twig' %}
+{% block content %}
 {% block fos_user_content %}
+    {% endblock fos_user_content %}
+
+
 
 {% endblock %}
